--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwartsExternalAdmin_AdminPoliciesEnabled/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwartsExternalAdmin_AdminPoliciesEnabled/policies.yaml
@@ -10,10 +10,8 @@ metadata:
 spec:
     egress:
         - to:
-            - podSelector:
-                matchExpressions:
-                    - key: to-NLCimplement
-                      operator: Exists
+            - ipBlock:
+                cidr: 0.0.0.0/16
     podSelector:
         matchExpressions:
             - key: group__Web
@@ -33,10 +31,8 @@ metadata:
 spec:
     egress:
         - to:
-            - podSelector:
-                matchExpressions:
-                    - key: to-NLCimplement
-                      operator: Exists
+            - ipBlock:
+                cidr: 146.2.0.0/16
     podSelector:
         matchExpressions:
             - key: group__App
@@ -56,10 +52,8 @@ metadata:
 spec:
     egress:
         - to:
-            - podSelector:
-                matchExpressions:
-                    - key: to-NLCimplement
-                      operator: Exists
+            - ipBlock:
+                cidr: 220.0.1.0/28
     podSelector:
         matchExpressions:
             - key: group__DB
@@ -79,10 +73,8 @@ metadata:
 spec:
     ingress:
         - from:
-            - podSelector:
-                matchExpressions:
-                    - key: to-NLCimplement
-                      operator: Exists
+            - ipBlock:
+                cidr: 122.0.0.0/8
     podSelector:
         matchExpressions:
             - key: group__Dumbledore
