--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExternalSimpleWithInterlDenyAllowAdmin_NoHint_AdminPoliciesEnabled/adminPolicies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExternalSimpleWithInterlDenyAllowAdmin_NoHint_AdminPoliciesEnabled/adminPolicies.yaml
@@ -31,3 +31,123 @@ spec:
             podSelector: {}
 status:
     conditions: null
+---
+apiVersion: policy.networking.k8s.io/v1alpha1
+kind: AdminNetworkPolicy
+metadata:
+    annotations:
+        description: '(deny: (src: (group = frontend) dst: (IP addr in 1.2.0.0/30) conn: TCP)'
+        nsx-id: "1004"
+    creationTimestamp: null
+    name: admin-policy-1
+spec:
+    egress:
+        - action: Deny
+          ports:
+            - portRange:
+                end: 65535
+                protocol: TCP
+                start: 1
+          to:
+            - networks:
+                - 1.2.0.0/30
+    priority: 2
+    subject:
+        pods:
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
+            podSelector:
+                matchExpressions:
+                    - key: group__frontend
+                      operator: Exists
+status:
+    conditions: null
+---
+apiVersion: policy.networking.k8s.io/v1alpha1
+kind: AdminNetworkPolicy
+metadata:
+    annotations:
+        description: '(allow: (src: (group = frontend) dst: (IP addr in 1.2.0.0/24) conn: TCP)'
+        nsx-id: "1005"
+    creationTimestamp: null
+    name: admin-policy-2
+spec:
+    egress:
+        - action: Allow
+          ports:
+            - portRange:
+                end: 65535
+                protocol: TCP
+                start: 1
+          to:
+            - networks:
+                - 1.2.0.0/24
+    priority: 3
+    subject:
+        pods:
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
+            podSelector:
+                matchExpressions:
+                    - key: group__frontend
+                      operator: Exists
+status:
+    conditions: null
+---
+apiVersion: policy.networking.k8s.io/v1alpha1
+kind: AdminNetworkPolicy
+metadata:
+    annotations:
+        description: '(deny: (src: (group = frontend) dst: (IP addr in 1.2.0.0/24) conn: All Connections)'
+        nsx-id: "1006"
+    creationTimestamp: null
+    name: admin-policy-3
+spec:
+    egress:
+        - action: Deny
+          ports: null
+          to:
+            - networks:
+                - 1.2.0.0/24
+    priority: 4
+    subject:
+        pods:
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
+            podSelector:
+                matchExpressions:
+                    - key: group__frontend
+                      operator: Exists
+status:
+    conditions: null
+---
+apiVersion: policy.networking.k8s.io/v1alpha1
+kind: AdminNetworkPolicy
+metadata:
+    annotations:
+        description: '(allow: (src: (group = frontend) dst: (IP addr in 1.2.0.0/16) conn: All Connections)'
+        nsx-id: "1007"
+    creationTimestamp: null
+    name: admin-policy-4
+spec:
+    egress:
+        - action: Allow
+          ports: null
+          to:
+            - networks:
+                - 1.2.0.0/16
+    priority: 5
+    subject:
+        pods:
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
+            podSelector:
+                matchExpressions:
+                    - key: group__frontend
+                      operator: Exists
+status:
+    conditions: null
