--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExternalSimpleWithInterlDenyAllowAdmin_NoHint_AdminPoliciesEnabled/adminPolicies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExternalSimpleWithInterlDenyAllowAdmin_NoHint_AdminPoliciesEnabled/adminPolicies.yaml
@@ -36,27 +36,21 @@ apiVersion: policy.networking.k8s.io/v1alpha1
 kind: AdminNetworkPolicy
 metadata:
     annotations:
-        description: '(deny: (src: (IP addr in 1.2.0.0/30) dst: (group = frontend) conn: TCP)'
+        description: '(deny: (src: (group = frontend) dst: (IP addr in 1.2.0.0/30) conn: TCP)'
         nsx-id: "1004"
     creationTimestamp: null
     name: admin-policy-1
 spec:
-    ingress:
+    egress:
         - action: Deny
-          from:
-            - pods:
-                namespaceSelector:
-                    matchLabels:
-                        kubernetes.io/metadata.name: default
-                podSelector:
-                    matchExpressions:
-                        - key: to-NLCimplement
-                          operator: Exists
           ports:
             - portRange:
                 end: 65535
                 protocol: TCP
                 start: 1
+          to:
+            - networks:
+                - 1.2.0.0/30
     priority: 2
     subject:
         pods:
@@ -74,27 +68,21 @@ apiVersion: policy.networking.k8s.io/v1alpha1
 kind: AdminNetworkPolicy
 metadata:
     annotations:
-        description: '(allow: (src: (IP addr in 1.2.0.0/24) dst: (group = frontend) conn: TCP)'
+        description: '(allow: (src: (group = frontend) dst: (IP addr in 1.2.0.0/24) conn: TCP)'
         nsx-id: "1005"
     creationTimestamp: null
     name: admin-policy-2
 spec:
-    ingress:
+    egress:
         - action: Allow
-          from:
-            - pods:
-                namespaceSelector:
-                    matchLabels:
-                        kubernetes.io/metadata.name: default
-                podSelector:
-                    matchExpressions:
-                        - key: to-NLCimplement
-                          operator: Exists
           ports:
             - portRange:
                 end: 65535
                 protocol: TCP
                 start: 1
+          to:
+            - networks:
+                - 1.2.0.0/24
     priority: 3
     subject:
         pods:
@@ -112,23 +100,17 @@ apiVersion: policy.networking.k8s.io/v1alpha1
 kind: AdminNetworkPolicy
 metadata:
     annotations:
-        description: '(deny: (src: (IP addr in 1.2.0.0/24) dst: (group = frontend) conn: All Connections)'
+        description: '(deny: (src: (group = frontend) dst: (IP addr in 1.2.0.0/24) conn: All Connections)'
         nsx-id: "1006"
     creationTimestamp: null
     name: admin-policy-3
 spec:
-    ingress:
+    egress:
         - action: Deny
-          from:
-            - pods:
-                namespaceSelector:
-                    matchLabels:
-                        kubernetes.io/metadata.name: default
-                podSelector:
-                    matchExpressions:
-                        - key: to-NLCimplement
-                          operator: Exists
           ports: null
+          to:
+            - networks:
+                - 1.2.0.0/24
     priority: 4
     subject:
         pods:
@@ -146,23 +128,17 @@ apiVersion: policy.networking.k8s.io/v1alpha1
 kind: AdminNetworkPolicy
 metadata:
     annotations:
-        description: '(allow: (src: (IP addr in 1.2.0.0/16) dst: (group = frontend) conn: All Connections)'
+        description: '(allow: (src: (group = frontend) dst: (IP addr in 1.2.0.0/16) conn: All Connections)'
         nsx-id: "1007"
     creationTimestamp: null
     name: admin-policy-4
 spec:
-    ingress:
+    egress:
         - action: Allow
-          from:
-            - pods:
-                namespaceSelector:
-                    matchLabels:
-                        kubernetes.io/metadata.name: default
-                podSelector:
-                    matchExpressions:
-                        - key: to-NLCimplement
-                          operator: Exists
           ports: null
+          to:
+            - networks:
+                - 1.2.0.0/16
     priority: 5
     subject:
         pods:
