--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExternalSimpleWithInterlDenyAllowAdmin_NoHint_AdminPoliciesEnabled/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExternalSimpleWithInterlDenyAllowAdmin_NoHint_AdminPoliciesEnabled/policies.yaml
@@ -2,26 +2,24 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: 'src: (IP addr in 1.240.0.0/28) dst: (group = frontend) conn: ICMP,UDP'
+        description: 'src: (group = frontend) dst: (IP addr in 1.240.0.0/28) conn: ICMP,UDP'
         nsx-id: "1009"
     creationTimestamp: null
     name: policy-0
     namespace: default
 spec:
-    ingress:
-        - from:
-            - podSelector:
-                matchExpressions:
-                    - key: to-NLCimplement
-                      operator: Exists
-          ports:
+    egress:
+        - ports:
             - protocol: UDP
+          to:
+            - ipBlock:
+                cidr: 1.240.0.0/28
     podSelector:
         matchExpressions:
             - key: group__frontend
               operator: Exists
     policyTypes:
-        - Ingress
+        - Egress
 ---
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
