--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExternalSimpleWithInterlDenyAllowAdmin_NoHint_AdminPoliciesEnabled/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExternalSimpleWithInterlDenyAllowAdmin_NoHint_AdminPoliciesEnabled/policies.yaml
@@ -2,24 +2,24 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: 'src: (group = frontend) dst: (IP addr in 1.240.0.0/28) conn: ICMP,UDP'
+        description: 'src: (IP addr in 1.240.0.0/28) dst: (group = frontend) conn: ICMP,UDP'
         nsx-id: "1009"
     creationTimestamp: null
     name: policy-0
     namespace: default
 spec:
-    egress:
-        - ports:
-            - protocol: UDP
-          to:
+    ingress:
+        - from:
             - ipBlock:
                 cidr: 1.240.0.0/28
+          ports:
+            - protocol: UDP
     podSelector:
         matchExpressions:
             - key: group__frontend
               operator: Exists
     policyTypes:
-        - Egress
+        - Ingress
 ---
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
