--- a/pkg/synthesis/tests_expected_output/k8s_resources/Example1External_NoHint/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/Example1External_NoHint/policies.yaml
@@ -31,6 +31,28 @@ metadata:
     name: policy-1
     namespace: default
 spec:
+    egress:
+        - ports:
+            - protocol: TCP
+          to:
+            - podSelector:
+                matchExpressions:
+                    - key: group__frontend
+                      operator: Exists
+    podSelector: {}
+    policyTypes:
+        - Egress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+    annotations:
+        description: 'src: (IP addr in 1.2.0.0-1.2.1.255) dst: (group = frontend) conn: TCP'
+        nsx-id: "1004"
+    creationTimestamp: null
+    name: policy-2
+    namespace: default
+spec:
     ingress:
         - from:
             - ipBlock:
@@ -51,7 +73,29 @@ metadata:
         description: 'src: (IP addr in 1.2.3.0-1.2.4.255) dst: (group = frontend) conn: UDP'
         nsx-id: "1005"
     creationTimestamp: null
-    name: policy-2
+    name: policy-3
+    namespace: default
+spec:
+    egress:
+        - ports:
+            - protocol: UDP
+          to:
+            - podSelector:
+                matchExpressions:
+                    - key: group__frontend
+                      operator: Exists
+    podSelector: {}
+    policyTypes:
+        - Egress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+    annotations:
+        description: 'src: (IP addr in 1.2.3.0-1.2.4.255) dst: (group = frontend) conn: UDP'
+        nsx-id: "1005"
+    creationTimestamp: null
+    name: policy-4
     namespace: default
 spec:
     ingress:
