--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwartsExternalAdmin_AdminPoliciesEnabled/adminPolicies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwartsExternalAdmin_AdminPoliciesEnabled/adminPolicies.yaml
@@ -148,3 +148,31 @@ spec:
             podSelector: {}
 status:
     conditions: null
+---
+apiVersion: policy.networking.k8s.io/v1alpha1
+kind: AdminNetworkPolicy
+metadata:
+    annotations:
+        description: '(deny: (src: (*) dst: (IP addr in 0.0.0.0/0) conn: All Connections)'
+        nsx-id: "10300"
+    creationTimestamp: null
+    name: admin-policy-5
+spec:
+    ingress:
+        - action: Deny
+          from:
+            - pods:
+                namespaceSelector:
+                    matchLabels:
+                        kubernetes.io/metadata.name: default
+                podSelector: {}
+          ports: null
+    priority: 6
+    subject:
+        pods:
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
+            podSelector: {}
+status:
+    conditions: null
