--- a/pkg/synthesis/tests_expected_output/k8s_resources/Example1dExternalWithSegments_NoHint/pods.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/Example1dExternalWithSegments_NoHint/pods.yaml
@@ -9,7 +9,10 @@ metadata:
     namespace: default
 spec:
     containers: null
-status: {}
+status:
+    podIP: 0.0.1.0
+    podIPs:
+        - ip: 0.0.1.0
 ---
 apiVersion: v1
 kind: Pod
@@ -22,7 +25,10 @@ metadata:
     namespace: default
 spec:
     containers: null
-status: {}
+status:
+    podIP: 0.0.1.192
+    podIPs:
+        - ip: 0.0.1.192
 ---
 apiVersion: v1
 kind: Pod
