--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleInternalWithInterDenyAllow/pods.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleInternalWithInterDenyAllow/pods.yaml
@@ -12,7 +12,10 @@ metadata:
     namespace: default
 spec:
     containers: null
-status: {}
+status:
+    podIP: 10.0.0.0
+    podIPs:
+        - ip: 10.0.0.0
 ---
 apiVersion: v1
 kind: Pod
@@ -27,7 +30,10 @@ metadata:
     namespace: default
 spec:
     containers: null
-status: {}
+status:
+    podIP: 10.0.0.100
+    podIPs:
+        - ip: 10.0.0.100
 ---
 apiVersion: v1
 kind: Pod
@@ -42,7 +48,10 @@ metadata:
     namespace: default
 spec:
     containers: null
-status: {}
+status:
+    podIP: 10.0.0.101
+    podIPs:
+        - ip: 10.0.0.101
 ---
 apiVersion: v1
 kind: Pod
@@ -56,7 +65,10 @@ metadata:
     namespace: default
 spec:
     containers: null
-status: {}
+status:
+    podIP: 10.0.1.0
+    podIPs:
+        - ip: 10.0.1.0
 ---
 apiVersion: v1
 kind: Pod
@@ -70,7 +82,10 @@ metadata:
     namespace: default
 spec:
     containers: null
-status: {}
+status:
+    podIP: 10.0.1.1
+    podIPs:
+        - ip: 10.0.1.1
 ---
 apiVersion: v1
 kind: Pod
@@ -82,7 +97,10 @@ metadata:
     namespace: default
 spec:
     containers: null
-status: {}
+status:
+    podIP: 10.250.1.0
+    podIPs:
+        - ip: 10.250.1.0
 ---
 apiVersion: v1
 kind: Pod
@@ -94,7 +112,10 @@ metadata:
     namespace: default
 spec:
     containers: null
-status: {}
+status:
+    podIP: 10.250.1.1
+    podIPs:
+        - ip: 10.250.1.1
 ---
 apiVersion: v1
 kind: Pod
@@ -107,7 +128,10 @@ metadata:
     namespace: default
 spec:
     containers: null
-status: {}
+status:
+    podIP: 172.16.10.10
+    podIPs:
+        - ip: 172.16.10.10
 ---
 apiVersion: v1
 kind: Pod
@@ -120,7 +144,10 @@ metadata:
     namespace: default
 spec:
     containers: null
-status: {}
+status:
+    podIP: 192.168.0.0
+    podIPs:
+        - ip: 192.168.0.0
 ---
 apiVersion: v1
 kind: Pod
@@ -133,7 +160,10 @@ metadata:
     namespace: default
 spec:
     containers: null
-status: {}
+status:
+    podIP: 192.168.255.0
+    podIPs:
+        - ip: 192.168.255.0
 ---
 apiVersion: v1
 kind: Pod
