--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleInternalWithInterDenyAllowWithSegments/pods.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleInternalWithInterDenyAllowWithSegments/pods.yaml
@@ -12,7 +12,10 @@ metadata:
     namespace: default
 spec:
     containers: null
-status: {}
+status:
+    podIP: 10.0.0.0
+    podIPs:
+        - ip: 10.0.0.0
 ---
 apiVersion: v1
 kind: Pod
@@ -27,7 +30,10 @@ metadata:
     namespace: default
 spec:
     containers: null
-status: {}
+status:
+    podIP: 10.0.0.100
+    podIPs:
+        - ip: 10.0.0.100
 ---
 apiVersion: v1
 kind: Pod
@@ -42,7 +48,10 @@ metadata:
     namespace: default
 spec:
     containers: null
-status: {}
+status:
+    podIP: 10.0.0.101
+    podIPs:
+        - ip: 10.0.0.101
 ---
 apiVersion: v1
 kind: Pod
@@ -56,7 +65,10 @@ metadata:
     namespace: default
 spec:
     containers: null
-status: {}
+status:
+    podIP: 10.0.1.0
+    podIPs:
+        - ip: 10.0.1.0
 ---
 apiVersion: v1
 kind: Pod
@@ -70,7 +82,10 @@ metadata:
     namespace: default
 spec:
     containers: null
-status: {}
+status:
+    podIP: 10.0.1.1
+    podIPs:
+        - ip: 10.0.1.1
 ---
 apiVersion: v1
 kind: Pod
@@ -83,7 +98,10 @@ metadata:
     namespace: default
 spec:
     containers: null
-status: {}
+status:
+    podIP: 10.250.1.0
+    podIPs:
+        - ip: 10.250.1.0
 ---
 apiVersion: v1
 kind: Pod
@@ -96,7 +114,10 @@ metadata:
     namespace: default
 spec:
     containers: null
-status: {}
+status:
+    podIP: 10.250.1.1
+    podIPs:
+        - ip: 10.250.1.1
 ---
 apiVersion: v1
 kind: Pod
@@ -109,7 +130,10 @@ metadata:
     namespace: default
 spec:
     containers: null
-status: {}
+status:
+    podIP: 172.16.10.10
+    podIPs:
+        - ip: 172.16.10.10
 ---
 apiVersion: v1
 kind: Pod
@@ -122,7 +146,10 @@ metadata:
     namespace: default
 spec:
     containers: null
-status: {}
+status:
+    podIP: 192.168.0.0
+    podIPs:
+        - ip: 192.168.0.0
 ---
 apiVersion: v1
 kind: Pod
@@ -135,7 +162,10 @@ metadata:
     namespace: default
 spec:
     containers: null
-status: {}
+status:
+    podIP: 192.168.255.0
+    podIPs:
+        - ip: 192.168.255.0
 ---
 apiVersion: v1
 kind: Pod
