--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,70 +1,6 @@
-linters-settings:
-  dupl:
-    threshold: 100
-  funlen:
-    lines: 100
-    statements: 50
-  goconst:
-    min-len: 2
-    min-occurrences: 2
-  gocritic:
-    enabled-tags:
-      - diagnostic
-      - experimental
-      - opinionated
-      - performance
-      - style
-  gocyclo:
-    min-complexity: 15
-  goimports:
-    local-prefixes: github.com/np-guard
-  mnd:
-    # don't include the "operation" and "assign"
-    checks: 
-      - argument
-      - case
-      - condition
-      - return
-    ignored-numbers:
-      - "0"
-      - "1"
-      - "2"
-      - "3"
-    ignored-functions:
-      - strings.SplitN
-  lll:
-    line-length: 140
-  misspell:
-    locale: US
-  nolintlint:
-    allow-unused: false # report any unused nolint directives
-    require-explanation: false # don't require an explanation for nolint directives
-    require-specific: false # don't require nolint directives to be specific about which linter is being skipped
-  revive:
-    # see https://github.com/mgechev/revive#available-rules for details.
-    ignore-generated-header: true
-    severity: warning
-    rules:
-      - name: indent-error-flow
-        severity: warning
-      - name: exported
-        severity: warning
-        arguments:
-          - disableStutteringCheck
-      - name: add-constant
-        severity: warning
-        arguments:
-          - maxLitCount: "1"
-            allowStrs: '"",".","-","/","\n","\n\n","\t","error","true","false","%q"'
-            allowInts: "0,1,2,404"
-            allowFloats: "0.0,0.,1.0,1.,2.0,2."
-  tagliatelle:
-    case:
-      rules:
-        json: snake
-
+version: "2"
 linters:
-  disable-all: true
+  default: none
   enable:
     - asasalint
     - asciicheck
@@ -83,12 +19,9 @@ linters:
     - goconst
     - gocritic
     - gocyclo
-    - gofmt
-    - goimports
     - gomoddirectives
     - goprintffuncname
     - gosec
-    - gosimple
     - govet
     - grouper
     - importas
@@ -110,29 +43,106 @@ linters:
     - reassign
     - revive
     - staticcheck
-    - stylecheck
     - tagliatelle
     - testableexamples
-    - typecheck
     - unconvert
     - unparam
     - unused
     - usestdlibvars
     - usetesting
     - whitespace
- 
-issues:
-  exclude-dirs:
-    - pkg/nsx
-  exclude-files:
-    - pkg/analyzer/dfw_old.go
-  exclude-rules:
-    - path: _test\.go
-      linters:
-       - dupl
-       - revive
-       - goconst
-       - funlen
-
-run:
-  timeout: 5m
+  settings:
+    dupl:
+      threshold: 100
+    funlen:
+      lines: 100
+      statements: 50
+    goconst:
+      min-len: 2
+      min-occurrences: 2
+    gocritic:
+      enabled-tags:
+        - diagnostic
+        - experimental
+        - opinionated
+        - performance
+        - style
+    gocyclo:
+      min-complexity: 15
+    lll:
+      line-length: 140
+    misspell:
+      locale: US
+    mnd:
+      checks:
+        - argument
+        - case
+        - condition
+        - return
+      ignored-numbers:
+        - "0"
+        - "1"
+        - "2"
+        - "3"
+      ignored-functions:
+        - strings.SplitN
+    nolintlint:
+      require-explanation: false
+      require-specific: false
+      allow-unused: false
+    revive:
+      severity: warning
+      rules:
+        - name: indent-error-flow
+          severity: warning
+        - name: exported
+          arguments:
+            - disableStutteringCheck
+          severity: warning
+        - name: add-constant
+          arguments:
+            - allowFloats: 0.0,0.,1.0,1.,2.0,2.
+              allowInts: 0,1,2,404
+              allowStrs: '"",".","-","/","\n","\n\n","\t","error","true","false","%q"'
+              maxLitCount: "1"
+          severity: warning
+    tagliatelle:
+      case:
+        rules:
+          json: snake
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    rules:
+      - linters:
+          - dupl
+          - funlen
+          - goconst
+          - revive
+        path: _test\.go
+    paths:
+      - pkg/analyzer/dfw_old.go
+      - pkg/nsx
+      - third_party$
+      - builtin$
+      - examples$
+formatters:
+  enable:
+    - gofmt
+    - goimports
+  settings:
+    goimports:
+      local-prefixes:
+        - github.com/np-guard
+  exclusions:
+    generated: lax
+    paths:
+      - pkg/analyzer/dfw_old.go
+      - pkg/nsx
+      - third_party$
+      - builtin$
+      - examples$
